--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
   <head>
+    <title>Streamium - Pay-Per-Second Video</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="icon" type="image/png" href="/crown.png" />
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
