--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Streamium - Pay-Per-Second Video</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="icon" type="image/png" href="/crown.png" />
+    <link rel="icon" type="image/png" href="/logo12.png" />
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
